--- a/templates/index.html
+++ b/templates/index.html
@@ -20,6 +20,67 @@
     max-width: 1615px;
   }
 
+  /*custom preloading if ur connection bad*/
+#preloader {
+  position: fixed;
+  z-index: 100;
+  background: #ffffff;
+  width: 100%;
+  height: 100vh;
+}
+
+.loader {
+  border: 0 soild transparent;
+  border-radius: 50%;
+  width: 150px;
+  height: 150px;
+  position: absolute;
+  top : 50%;
+  left : 50%;
+  transform: translate(-50%, -50%);
+}
+
+.loader:before, .loader::after {
+  content: '';
+  border: 1em solid rgb(104, 103, 103);
+  border-radius: 50%;
+  width: inherit;
+  height: inherit;
+  position: absolute;
+  top: 0;
+  left: 0;
+  animation: loader 1.5s linear infinite;
+  opacity: 0;
+}
+
+.loader::before {
+  animation-delay: 750ms;
+}
+
+@keyframes loader {
+  0% {
+    transform: scale(0);
+    opacity: 1;
+  }
+  25%{
+    transform: scale(0.25);
+    opacity: 0.75;
+  }
+  50% {
+    opacity: 0.5;
+  }
+  75%{
+    transform: scale(0.75);
+    opacity: 0.25;
+  }
+  100% {
+    transform: scale(1);
+    opacity: 0;
+  }
+}
+
+/* ===================================== */
+
   header .title {
     max-width: 945px;
     padding: 19px 0;
@@ -143,6 +204,10 @@
   </style>
 
   <body>
+
+    <div id="preloader">
+      <div class="loader"></div>
+    </div>
     
     <header>
       <nav class = "title">
@@ -181,12 +246,14 @@
           <p>Image compression time : </p>
         </div>
         <div class= "right">
-          <button class="btn"><i class="fa fa-download"></i> Download</button>
+          <button id="download" class="btn"><i class="fa fa-download"></i> Download</button>
         </div>
       </div>
 
     </main>
 
+    <script src="{{ url_for('static', path='/FileSaver.min.js') }}"></script>
+    <script src="{{ url_for('static', path='/script.js') }}"></script>
     <script src="{{ url_for('static', path='/main.js') }}"></script>
     <script src="{{ url_for('static', path='/app.js') }}"></script>
 
