--- a/templates/index.html
+++ b/templates/index.html
@@ -6,208 +6,15 @@
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Resize Images</title>
+    <link href="{{ url_for('static', path='/styles/styles.css') }}" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/b0057c069b.js" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
   </head>
 
-  <style>
-  *{
-    margin: 0 auto;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: "Poppins", sans-serif;
-    max-width: 1615px;
-  }
-
-  /*custom preloading if ur connection bad*/
-#preloader {
-  position: fixed;
-  z-index: 100;
-  background: #ffffff;
-  width: 100%;
-  height: 100vh;
-}
-
-.loader {
-  border: 0 soild transparent;
-  border-radius: 50%;
-  width: 150px;
-  height: 150px;
-  position: absolute;
-  top : 50%;
-  left : 50%;
-  transform: translate(-50%, -50%);
-}
-
-.loader:before, .loader::after {
-  content: '';
-  border: 1em solid rgb(104, 103, 103);
-  border-radius: 50%;
-  width: inherit;
-  height: inherit;
-  position: absolute;
-  top: 0;
-  left: 0;
-  animation: loader 1.5s linear infinite;
-  opacity: 0;
-}
-
-.loader::before {
-  animation-delay: 750ms;
-}
-
-@keyframes loader {
-  0% {
-    transform: scale(0);
-    opacity: 1;
-  }
-  25%{
-    transform: scale(0.25);
-    opacity: 0.75;
-  }
-  50% {
-    opacity: 0.5;
-  }
-  75%{
-    transform: scale(0.75);
-    opacity: 0.25;
-  }
-  100% {
-    transform: scale(1);
-    opacity: 0;
-  }
-}
-
-/* ===================================== */
-
-  header .title {
-    max-width: 945px;
-    padding: 19px 0;
-    text-align: center;
-    font-size: 55px;
-    border-bottom: 1px solid #000;
-  }
-
-  main {
-    padding: 9px;
-  }
-
-  main .first p,
-  main .first .choice .choice_first, 
-  main .first .choice .choice_second, 
-  main .first .choice .choice_third{
-    margin-top: 25px;
-  }
-
-  main .first p {
-    font-size: 35px;
-  }
-
-  main .first .choice .choice_first .open_file {
-    font-size: 17px;
-  }
-
-  main .first .choice .choice_first .open_file::-webkit-file-upload-button {
-    padding : 9px;
-    background-color : white ;
-    border : 1px solid blue;
-    color : blue;
-    border-radius : 7px;
-    cursor : pointer;
-  }
-
-  main .first .choice .choice_second input {
-    margin-left: 9px;
-    width: 45px;
-    padding: 0 5px;
-    height: 25px;
-    font-size: 16px;
-    text-align: center;
-  }
-
-  main .first .choice .choice_third .go {
-    font-size: 21px;
-    background: rgb(0, 153, 180);
-    border-radius: 0px;
-    padding: 7.5px 10px;
-    color: white;
-    transition: all 550ms ease;
-    cursor: pointer;
-    border: none;
-  }
-
-  main .first .choice .choice_third .go:hover {
-    box-shadow: inset 65px 0 0 0 #33da2d;
-    color: black;
-    font-weight: bold;
-  }
-
-  main .second {
-    margin-top: 25px;
-    display: flex;
-    flex-wrap: wrap;
-  }
-
-  main .second > *{
-    flex: 1 1 35%;
-  }
-
-  main .second .before,
-  main .second .after {
-    text-align: center;
-  }
-
-  main .second .before p,
-  main .second .after p {
-    margin-top: 7px;
-    margin-bottom: 5px;
-    font-size: 25px;
-  }
-
-  main .second .before img:hover,
-  main .second .after img:hover {
-    background-color: white;
-  }
-
-  main .third{
-    padding: 5px;
-    margin-top: 1px;
-    display: flex;
-  }
-
-  main .third .left {
-    margin-left: 50px;
-  }
-
-  main .third .left p {
-    font-size: 19px;
-  }
-
-  main .third .right {
-    margin-right: 50px;
-  }
-
-  main .third .right .btn {
-    background-color: DodgerBlue;
-    border-radius: 15px;
-    border: none;
-    color: white;
-    padding: 12px 30px;
-    cursor: pointer;
-    font-size: 20px;
-  }
-
-  main .third .right .btn:hover {
-    background-color: RoyalBlue;
-  }
-  </style>
-
   <body>
-
-    <div id="preloader">
-      <div class="loader"></div>
-    </div>
     
     <header>
       <nav class = "title">
@@ -222,28 +29,28 @@
       <div class = "first">
         <p> Input Your Image </p>
 
-        <div class = "choice">
-          <div class = "choice_first"> <input type="file" id="upload" accept=".jpg, .jpeg, .png" class="open_file"/> </div>
-          <div class = "choice_second"> Image Compression Rate :<input /> % </div>
+        <form class = "choice">
+          <div class = "choice_first"> <input type="file" id="upload" accept=".jpg, .jpeg, .png" class="open_file" name="image"/> </div>
+          <div class = "choice_second"> Image Compression Ratio : <input type="text" id="inputPercentage" name="inputPercentage"/> % </div>
           <div class = "choice_third"> <button onclick="process_image_compression()" class = "go"> Go !</button> </div>
-        </div>
+        </form>
       </div>
 
       <div class = "second"> 
         <div class= "before">
           <p>Before</p>
-          <img id="input" src="{{ url_for('static', path='/empty-image.png') }}" alt="FASTApi">
+          <img id="input" src="{{ url_for('static', path='/image/empty-image.png') }}" alt="FASTApi">
         </div>
         <div class= "after">
           <p>After</p>
-          <img id="output" src="{{ url_for('static', path='/empty-image.png') }}" alt="FASTApi">
+          <img id="output" src="{{ url_for('static', path='/image/empty-image.png') }}" alt="FASTApi">
         </div>
       </div>
 
       <div class = "third"> 
         <div class= "left">
-          <p>Image pixel difference percentage : </p>
-          <p>Image compression time : </p>
+          <div class="text_left" >Image pixel difference percentage : <span id="outputPercentage"></span> </div>
+          <div class="text_left">Image compression time : <span id="outputTime"></span> </div>
         </div>
         <div class= "right">
           <button id="download" class="btn"><i class="fa fa-download"></i> Download</button>
@@ -252,10 +59,9 @@
 
     </main>
 
-    <script src="{{ url_for('static', path='/FileSaver.min.js') }}"></script>
-    <script src="{{ url_for('static', path='/script.js') }}"></script>
-    <script src="{{ url_for('static', path='/main.js') }}"></script>
-    <script src="{{ url_for('static', path='/app.js') }}"></script>
+    <script  src="{{ url_for('static', path='/js/FileSaver.min.js') }}"></script>
+    <script  src="{{ url_for('static', path='/js/processDownload.js') }}"></script>
+    <script  src="{{ url_for('static', path='/js/processImageCompression.js') }}"></script>
 
   </body>
 </html>
