--- a/templates/index.html
+++ b/templates/index.html
@@ -29,11 +29,11 @@
       <div class = "first">
         <p> Input Your Image </p>
 
-        <form class = "choice">
+        <div class = "choice">
           <div class = "choice_first"> <input type="file" id="upload" accept=".jpg, .jpeg, .png" class="open_file" name="image"/> </div>
           <div class = "choice_second"> Image Compression Ratio : <input type="text" id="inputPercentage" name="inputPercentage"/> % </div>
           <div class = "choice_third"> <button onclick="process_image_compression()" class = "go"> Go !</button> </div>
-        </form>
+        </div>
       </div>
 
       <div class = "second"> 
